[package]
name = "bw-mpc-lib-client"
version = "0.1.0"
edition = "2021"
authors = [
    "asta.xiong <asta.xiong@lunarax.io>",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bw_mpc_client"
path = "src/lib.rs"
crate-type = ["cdylib","staticlib"]

[[bin]]
name = "mpc_mpc_client_exec"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
reqwest = "0.9.5"
failure = "0.1.5"
floating-duration = "0.1.2"
curv = { package = "curv-kzen", version = "0.7" }

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
tag = "v0.3.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.4.6"


[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
